--- a/public/css/main.css
+++ b/public/css/main.css
@@ -275,6 +275,11 @@ form {
   color: white;
 }
 
+.a-btn {
+  color: inherit;
+  text-decoration: none;
+}
+
 @media (max-width: 768px) {
   .main-header__nav {
     display: none;
