--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -16,6 +16,7 @@
                 <input type="password" required name="password" id="password">
             </div>
 
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
             <button class="btn inner" type="submit">Login</button>
         </form>
     </main>
