--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -15,6 +15,7 @@
                 <label for="newPassword" style="margin-bottom: 0.5rem;">Change Password:</label>
               <div style="max-width: 100%;">
                 <input type="text" name="newPassword" id="newPassword">
+                <input type="hidden" name="_csrf" value="<%= csrfToken %> " />
                 <button type="submit" class="btn">Confirm Change</button>
               </div>
             </form>
