--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -61,6 +61,7 @@
       <% } else{ %>
       <li class="main-header__item">
         <form action="/logout" method="POST">
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
           <button type="submit">Logout</button>
         </form>
       </li>
@@ -101,6 +102,7 @@
     <% } else {%>
     <li class="mobile-nav__item">
       <form action="/logout" method="POST">
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
         <button type="submit">Logout</button>
       </form>
     </li>
