--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -29,7 +29,8 @@
                                 <div class="centered" style="font-weight: 900;" >Total Order Amount: <%= array[array.length-1] %> </div>
                                 <div class="deleteOrder">
                                     <form action="/delete-order" method="POST">
-                                        <input type="hidden" name="orderId" value="<% order._id %>">
+                                        <input type="hidden" name="orderId" value="<%= order._id %>">                                        
+                                        <input type="hidden" name="_csrf" value="<%= csrfToken %> " />
                                         <button class="btn red" type="submit">Remove order</button>
                                     </form>
                                 </div>
